--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
 	"description": "Language Server to aid with MCNP input file developement",
 	"author": "Ryan Pease",
 	"license": "MIT",
-	"version": "1.0.0",
+	"version": "0.0.1",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/rpease/mcnp-language-server"
 	},
-	"publisher": "vscode-samples",
+	"publisher": "RyanPease",
+	"icon": "client/images/physics-nuclear-pngrepo-com.png",
 	"categories": ["Programming Languages"],
 	"keywords": [
 		"MCNP",
