--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
 	"description": "Language Server to aid with MCNP input file developement",
 	"author": "Ryan Pease",
 	"license": "MIT",
-	"version": "0.0.2",
+	"version": "0.0.3",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/rpease/mcnp-language-server"
 	},
 	"publisher": "RyanPease",
 	"icon": "client/images/physics-nuclear-pngrepo-com.png",
-	"categories": ["Programming Languages"],
+	"categories": [
+		"Programming Languages"
+	],
 	"keywords": [
 		"MCNP",
 		"Monte Carlo",
@@ -84,6 +86,7 @@
 		"typescript": "^3.1.3"
 	},
 	"dependencies": {
+		"vsce": "^1.59.0",
 		"webpack": "^4.30.0"
 	}
 }
