--- a/package.json
+++ b/package.json
@@ -77,15 +77,18 @@
 		"compile": "tsc -b",
 		"watch": "tsc -b -w",
 		"postinstall": "cd client && npm install && cd ../server && npm install && cd ..",
-		"test": "sh ./scripts/e2e.sh"
+		"test": "mocha --require node_modules/ts-node/register server/test/**/*.ts"
 	},
 	"devDependencies": {
-		"@types/mocha": "^5.2.0",
+		"@types/chai": "^4.1.7",
+		"@types/mocha": "^5.2.6",
 		"@types/node": "^8.0.0",
+		"ts-node": "^8.1.0",
 		"tslint": "^5.11.0",
-		"typescript": "^3.1.3"
+		"typescript": "^3.4.5"
 	},
 	"dependencies": {
+		"chai": "^4.2.0",
 		"webpack": "^4.30.0"
 	}
 }
