--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,20 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
+			"type": "node",
+			"request": "launch",
+			"name": "Server Tests",
+			"program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
+			"args": [
+				"--require","${workspaceRoot}/node_modules/ts-node/register",
+				"--timeout","999999",
+				"--colors",
+				"${workspaceRoot}/server/test/**/*.ts"
+			],
+			"internalConsoleOptions": "openOnSessionStart"
+		},
+		
+		{
 			"type": "extensionHost",
 			"request": "launch",
 			"name": "Launch Client",
