--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ client/server
 .vscode-test
 /.vs/slnx.sqlite
 /.vs/slnx.sqlite-journal
+.vs/VSWorkspaceState.json
+.vs/mcnp-language-server/v15/.suo
