--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,15 @@
 {
-	"name": "lsp-sample-server",
-	"description": "Example implementation of a language server in node.",
+	"name": "mcnp-language-server",
+	"description": "Implementation of an MCNP Language Server",
 	"version": "1.0.0",
-	"author": "Microsoft Corporation",
+	"author": "Ryan Pease",
 	"license": "MIT",
 	"engines": {
 		"node": "*"
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/Microsoft/vscode-extension-samples"
+		"url": "https://github.com/rpease/mcnp-language-server"
 	},
 	"dependencies": {
 		"vscode-languageserver": "^4.1.3"
