Add packaging script for eacy packaging

--- a/package.json
+++ b/package.json
@@ -77,7 +77,8 @@
 		"compile": "tsc -b",
 		"watch": "tsc -b -w",
 		"postinstall": "cd client && npm install && cd ../server && npm install && cd ..",
-		"test": "sh ./scripts/e2e.sh"
+		"test": "sh ./scripts/e2e.sh",
+		"package": "vsce package"
 	},
 	"devDependencies": {
 		"@types/mocha": "^5.2.0",
