--- a/.vscodeignore
+++ b/.vscodeignore
@@ -7,6 +7,8 @@
 contributing.md
 .travis.yml
 client/node_modules/**
+server/node_modules/**
+test/**
 !client/node_modules/vscode-jsonrpc/**
 !client/node_modules/vscode-languageclient/**
 !client/node_modules/vscode-languageserver-protocol/**
