--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ client/server
 .vscode-test
 /.vs/slnx.sqlite
 /.vs/slnx.sqlite-journal
-.vs/mcnp-language-server/v15/.suo
 .vs/VSWorkspaceState.json
 *.vsix
+.vs/ProjectSettings.json
+*.suo
